--- a/index1.html
+++ b/index1.html
@@ -28,10 +28,10 @@
        
         <div class="image-upload-wrap">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-            <div class="drag-text">
-                <h3 class = "upload-text">얼굴사진 올리기<br>
-                <br>or<br>
-                <br>눌러서 업로드<br></h3>
+            <div class="drag-text" onclick="$('.file-upload-input').trigger( 'click' )">
+                <br><h3>얼굴사진 올리기</h3><br>
+                <br>or<br><br>
+                <br><h3>눌러서 업로드</h3><br><br>
             </div>
         </div>
         <div class="file-upload-content">
