--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
 <body>
     <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">재미로 보는 MBTI 테스트</span>
+  <span class="navbar-brand mb-0 h1">재미로 보는 MBTI 테스트(여자)</span>
 </nav>
     <section class="section">
         <h1 class="title">나는 어떤 유형의 사람일까?</h1>
