--- a/index1.html
+++ b/index1.html
@@ -51,7 +51,13 @@
             </div>
         </div>
     </div>
-    <div id="webcam-container"></div>
+    <div class="ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-u85ngzonfpyq" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    </div>
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
