--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
             
             </div>
         </div>
-    </div>
+    </div><br><br><br><br>
    <div class="ad-banner">
         <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-u85ngzonfpyq" 
