--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
            
 
         </div>
-    </div>
+    </div><br><br><br><br>
     
     <div class="ad-banner">
         <ins class="kakao_ad_area" style="display:none;" 
