--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div id="container">
          <p>
-             <img src = "img\questionmark2.jpg" class = "drawing" alt = "PHOTO" width = "350" height = "400">
+             <img src = "img\mbti title image.jpg" class = "drawing" alt = "PHOTO" width = "600" height = "400">
         </p>
         <button class="mbti-femalever" type="button" onClick="location.href='index1.html'">
             여자
