--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <div class="file-upload">
        
-        <div class="image-upload-wrap" style="max-width: 100%; height: auto;">
+        <div class="image-upload-wrap">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
             <div class="drag-text" onclick="$('.file-upload-input').trigger( 'click' )">
                 <br><h3>얼굴사진 올리기</h3><br>
