--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
                 <br><h3>눌러서 업로드</h3><br><br>
             </div>
         </div>
-        <div class="file-upload-content">
+             <div class="file-upload-content">
             <img class="file-upload-image" id = "face-image" src="#" alt="your image" />
             <div id="label-container"></div>
             <div class="image-title-wrap">
@@ -49,7 +49,9 @@
             
             </div>
         </div>
-    </div><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+            
+       <br><br><br><br><br><br><br><br><br><br><br><br>
    
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
