--- a/index2.html
+++ b/index2.html
@@ -18,8 +18,8 @@
 <body>
     <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">재미로 보는 MBTI 테스트(남자)</span>
-</nav>
+     <a class = "navbar-brand mb-0 h1"  href ="index.html">재미로 보는 MBTI 테스트(남자)</a>
+ </nav>
     <section class="section">
         <h1 class="title">나는 어떤 유형의 사람일까?</h1>
     </section>
